# terminal-weather-rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs  renderer.rs  weather.rs
src/effects/: color.rs  mod.rs
src/visualizations/: clouds.rs  mod.rs  precipitation.rs  temperature.rs  wind.rs
