[package]
name = "tws"
version = "0.1.0"
edition = "2021"
description = "Terminal Weather Station - Beautiful ASCII art weather visualizations in Rust"

[[bin]]
name = "tws"
path = "src/main.rs"

[dependencies]
# HTTP client with rustls (no OpenSSL required)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.13"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Color support
colored = "2.1"

# Date/time
chrono = { version = "0.4", features = ["clock"] }

# Random number generation
rand = "0.8"

# URL encoding
urlencoding = "2.1"

[profile.release]
opt-level = 3
lto = true
